# midgard-discord

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  cloud.py  database.py  docker-compose.yaml  main.py  pyproject.toml  utils.py
.github/workflows/: deploy-to-pypi-ghcr.yml  deploy-to-pypi.yml  pytest-310.yml  pytest.yml  run-pytest.yml  run-tests.yml
midgard_discord/: cloud.py  commands.py  database.py  main.py  networking.py  texts.py  utils.py
tests/: midgard_add_keypair_test.py  midgard_help_test.py  midgard_register_test.py
tests/commands/: conftest.py  midgard_add_keypair_test.py  midgard_add_portfoward_test.py  midgard_help_test.py  midgard_register_test.py  midgard_server_create_test.py
tests/database/: database_test.py
