[tool.poetry]
name = "midgard-discord"
version = "0.8.0"
description = "ChatOps discord bot to request and provision Openstack resources in MidgardLab"
authors = ["Nhat Ngo <discordbot.awg4s@mail.ngo.cx>"]
readme = "README.md"
packages = [{include = "midgard_discord"}]

[tool.poetry.dependencies]
python = "^3.10"
discord-py-interactions = "^4.4"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.9"}
aiosqlite = "^0.18.0"
openstacksdk = "^1.0.1"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
midgard-bot = "midgard_discord.main:main"
